@@ -14,10 +14,28 @@ import org.jetbrains.uast.UCallExpression;
 import org.jetbrains.uast.UExpression;
 import org.jetbrains.uast.visitor.AbstractUastNonRecursiveVisitor;
 
+import java.util.Collection;
 import java.util.List;
 
 import static com.intellij.codeInsight.AnnotationUtil.CHECK_HIERARCHY;
 
+/**
+ * Reports redundant {@code .in()} scope bindings where the bound class already declares
+ * the same scope via an annotation (e.g., {@code @Singleton}, {@code @RequestScoped}).
+ * The explicit scope in the binding duplicates the annotation and can be removed.
+ *
+ * <p>Example:
+ * <pre>
+ * // Flagged: Foo is already @Singleton
+ * {@literal @}Singleton
+ * class Foo {}
+ * bind(Foo.class).in(Scopes.SINGLETON);  // redundant
+ *
+ * // OK: Foo has no scope annotation
+ * class Bar {}
+ * bind(Bar.class).in(Scopes.SINGLETON);
+ * </pre>
+ */
 public final class RedundantScopeBindingInspection extends BaseUastInspection {
   public RedundantScopeBindingInspection() {
     super(UCallExpression.class);
@@ -53,26 +71,19 @@ public final class RedundantScopeBindingInspection extends BaseUastInspection {
       if (args.size() != 1) {
         return true;
       }
-      final UExpression arg = args.get(0);
-      final PsiElement argPsi = arg.getSourcePsi();
-      if (argPsi == null) {
-        return true;
-      }
-      if (!(argPsi instanceof com.intellij.psi.PsiExpression)) {
-        return true;
-      }
-      final String annotation = GuiceUtils.getScopeAnnotationForScopeExpression((com.intellij.psi.PsiExpression)argPsi);
-      if (annotation == null) {
+      final UExpression arg = args.getFirst();
+      final Collection<String> scopeAnnotations = GuiceUtils.getScopeAnnotationsForScopeExpression(arg);
+      if (scopeAnnotations == null || scopeAnnotations.isEmpty()) {
         return true;
       }
       final PsiClass boundClass = GuiceUtils.findImplementedClassForBinding(expression);
       if (boundClass == null) {
         return true;
       }
-      if (!AnnotationUtil.isAnnotated(boundClass, annotation, CHECK_HIERARCHY)) {
+      if (!AnnotationUtil.isAnnotated(boundClass, scopeAnnotations, CHECK_HIERARCHY)) {
         return true;
       }
-      registerError(arg);
+      registerError(expression);
       return true;
     }
   }
